# koco-swe-combined

./: .gitignore
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/ops_customize/ops/: CMakeLists.txt  ops.cpp  param_to_json.cpp
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/src/: CMakeLists.txt
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/src/atb/context/: context_base.cpp  runner_pool.cpp
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/src/atb/kernel_cache/: aclnn_executor_cache.cpp  kernel_cache.cpp  kernel_cache.h
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/src/atb/operation/: atb_operation_ir_cfg.h  customize_operation_ir_cfg.h  graph_operation.cpp  op_param_funcs.h  operation.cpp  operation_base.h  plugin_operation.cpp
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/src/atb/runner/: aclnn_runner.cpp  aclnn_runner.h  atb_kernel_method.h  hccl_runner.h  lcoc_runner.cpp  ops_runner.cpp  plugin_runner.cpp  runner.cpp
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/src/kernels/: CMakeLists.txt
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/src/torch_atb/: CMakeLists.txt  bindings.cpp  enger_graph_builder.cpp  graph_node.h  graph_operation_builder.cpp  operation_wrapper.cpp
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/tests/: CMakeLists.txt
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/tests/cinterface/: c_interface_utils.cpp  fused_add_topk_c_interface_test.cpp  mla_c_interface_test.cpp  mla_prefill_c_interface_test.cpp
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/tests/high_level_test/: README.md  operation_test.py
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/tests/infratest/: synchronize_test.py  test_kernel_cache.py  test_log_file.py  test_mem_alloc_algorithm.py
KOCO-bench/KOCO-bench-ch/domain_knowledge_understanding/repositories/ascend-transformer-boost/tests/unittest/: CMakeLists.txt
KOCO-bench/KOCO-bench-en/domain_code_generation/scripts/koco_openhands/: README.md  cli.py  pyproject.toml  runner.py  test_cli.py  test_runner.py
KOCO-bench/KOCO-bench-en/domain_code_generation/scripts/koco_openhands/agent/: __init__.py  sdk.py
KOCO-bench/KOCO-bench-en/domain_code_generation/scripts/koco_openhands/tools/: __init__.py
KOCO-bench/KOCO-bench-en/domain_code_generation/scripts/koco_openhands/tools/knowledge_search/: __init__.py  chunker.py  definition.py  hybrid.py  search_index.py  test_knowledge_search.py
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/VSLAM-LAB/Datasets/extra-files/: CMakeLists.txt  add_dataset_from_image_folders.py  add_new_dataset.py  dataset_template.py
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/: CMakeLists.txt  LICENSE  pyproject.toml
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/.本项目已经正式迁移至 Gitcode 平台/: README.md
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/ci/: dependency.xml
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/docs/: conf.py  installation.md  quick_tour.md  release_notes.md  开发指南.md  编译与构建.md  贡献指南.md
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/docs/capabilities/: PagedAttention.md  parallel.md
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/docs/contributors/: gitee-workflow.md  infra-command.md
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/docs/doxygen/: atb_document.txt
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/example/: graph_example.py
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/example/multiStream/: CMakeLists.txt  README.md  multiStream_multiGraph_demo.cpp  multiStream_singleGraph_demo.cpp
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/example/op_demo/: README.md  demo_util.h
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/include/atb/: atb_acl.h  context.h  types.h
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/ops_configs/: atb_ops_info.ini
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/ops_customize/: CMakeLists.txt
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/ops_customize/ops/: sym_check.cpp
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/scripts/: build.sh  build_attribute_utils.py  filelist.csv  help.info  release.sh
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/src/torch_atb/: enger_graph_builder.h  graph_node.cpp  graph_operation_builder.h  operation_wrapper.h
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/tests/cinterface/: CMakeLists.txt  c_interface_utils.h  mla_preprocess_c_interface_test.cpp  paged_cache_load_c_interface_test.cpp  ring_mla_c_interface_test.cpp  self_attention_prefix_encoder_c_interface_test.cpp
KOCO-bench/KOCO-bench-en/domain_knowledge_understanding/repositories/ascend-transformer-boost/tests/infratest/: infratest_utils.py  multi_stream_test.py  profiling_test.py  task_runner.py  test_compare_tiling_every_kernel.py  test_setup_cache.py  test_svector.py
(+6857 files in other folders)
