[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koco-openhands"
version = "0.1.0"
description = "KOCO-bench OpenHands agent evaluation pipeline"
requires-python = ">=3.12,<3.14"
dependencies = [
    "openhands-sdk~=1.15.0",
    "openhands-tools~=1.15.0",
    "regex~=2026.2",
    "litellm~=1.80",
    "pydantic~=2.12",
    "pytest~=9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools", "agent"]
